canary-version/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-canary
spec:
  selector:
    app: nginx
    version: canary
  ports:
    - port: 80
      targetPort: 80
