canary-version/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25"
spec:
  rules:
    - host: app.kirandns.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-canary
                port:
                  number: 80
